--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -33,7 +33,7 @@
 				</li>
 
 				<li class="nav-item active">
-					<a class="nav-link" href="">Connexion</a>
+					<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
 				</li>
 			{% endif %}
 			<li class="nav-item active">
