--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,86 +1,173 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.separated-list {
+  list-style-type: none;
+}
+
+.separated-list li:not(:last-child)::after {
+  content: " . ";
+  white-space: pre-wrap;
+  margin-bottom: 10px;
+}
+
 .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
 
 body {
-    position: relative;
-    height: 100%;
-}
-
-.footer-custom{
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(222, 234, 248);
-    box-shadow:0px 0px 10px 0.1rem rgba(0, 0, 0, 0.082);
-}
-
-.footer-custom li {
-    list-style: none;
+  position: relative;
+  height: 100%;
 }
 
 .navbar {
-    box-shadow:0px 0px 10px 0.1rem rgba(0, 0, 0, 0.479);
+  box-shadow: 0px 0px 10px 0.1rem rgba(0, 0, 0, 0.479);
 }
 
 .product-item {
-    margin-bottom: 1.5em;
+  margin-bottom: 1.5em;
 }
 
 .product-item h5 {
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 0.9em;
-    margin-bottom: 0.1em;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 0.9em;
+  margin-bottom: 0.1em;
 }
 
 .product-subtitle {
-    display: block;
-    margin-bottom: 0.2em;
+  display: block;
+  margin-bottom: 0.2em;
 }
 
 .product-price {
-    font-weight: bold;
-    display: block;
+  font-weight: bold;
+  display: block;
 }
 
-.col-form-label{
-    font-weight: bold;
-    /* margin-bottom: 0.3em; */
+.col-form-label {
+  font-weight: bold;
+  /* margin-bottom: 0.3em; */
 }
 
 strong {
-    display: block;
-    padding: 7px 0;
+  display: block;
+  padding: 7px 0;
 }
 
 [name="order"] .form-check {
-    background-color: rgba(225, 232, 235, 0.295);
-    padding: 1.5em 3em;
-    margin-bottom: .5em;
-    border-radius: .3em;
-    box-shadow:0px 0px 5px 0.1rem rgba(0, 0, 0, 0.1);
-
+  background-color: rgba(225, 232, 235, 0.295);
+  padding: 1.5em 3em;
+  margin-bottom: 0.5em;
+  border-radius: 0.3em;
+  box-shadow: 0px 0px 5px 0.1rem rgba(0, 0, 0, 0.1);
 }
 
 [name="order"] .form-check:hover {
-    box-shadow:0px 0px 10px 0.1rem rgba(0, 0, 0, 0.30);
+  box-shadow: 0px 0px 10px 0.1rem rgba(0, 0, 0, 0.3);
 }
 
 .cart-summary {
-    padding: 1em;
-    background-color: rgba(225, 232, 235, 0.295);
-    box-shadow:0px 0px 5px 0.1rem rgba(0, 0, 0, 0.1);
+  padding: 1em;
+  background-color: rgba(225, 232, 235, 0.295);
+  box-shadow: 0px 0px 5px 0.1rem rgba(0, 0, 0, 0.1);
+}
+
+/*--------------------------------------------------------------
+# Login page
+--------------------------------------------------------------*/
+.card-fill {
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid #d5d7d9;
+  border-radius: 0.5rem;
+  flex: 1 1 auto;
+}
+
+.card-fill .card-body {
+  display: flex;
+  align-items: center;
+  padding: 20px !important;
+}
+
+@media (min-width: 576px) {
+  .card-fill .card-body {
+    padding-top: 24px !important;
+    padding-bottom: 24px !important;
+    padding-left: 28px !important;
+    padding-right: 28px !important;
+  }
+}
+
+.my-8 {
+  margin-top: 32px !important;
+  margin-bottom: 32px !important;
+}
+
+.lh-label {
+  line-height: 1.35rem;
+}
+
+.form-control-login {
+  height: calc(1.75em + 0.875rem + 2px);
+  padding: 0.4375rem 1rem;
+  line-height: 1.75;
+  color: #0d161b;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #d5d7d9;
+  border-radius: 0.5rem;
+}
+
+.form-control-login::-webkit-input-placeholder {
+  color: #9ea2a4;
+}
+
+.form-control-login::-moz-placeholder {
+  color: #9ea2a4;
+}
+
+.form-control-login:-ms-input-placeholder {
+  color: #9ea2a4;
+}
+
+.form-control-login::-ms-input-placeholder {
+  color: #9ea2a4;
+}
+
+.form-control-login::placeholder {
+  color: #9ea2a4;
+}
+
+.form-control-login:focus {
+  color: #0d161b;
+  background-color: #fff;
+  border-color: #0d161b;
+  outline: 0;
+  box-shadow: 0 0 0 0.1875rem #d5d7d9;
+}
+
+form:invalid button.btn-dark[type="submit"],
+.btn-dark:disabled {
+  color: #fff;
+  background-color: #0d161b;
+  border-color: #0d161b;
+  opacity: 0.4;
+}
+
+.text-muted a {
+  color: #53595c !important;
 }
