--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 		<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
 		<meta name="generator" content="Jekyll v4.1.1">
 		<title>
-			{% block title %}Ma boot' hic
+			{% block title %}MarieSHope
 			{% endblock %}
 		</title>
 
