--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,24 +6,41 @@
 
 			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-		{% block stylesheets %}
-			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-		{% endblock %}
-
-		{% block javascripts %}
-			<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
-		{% endblock %}
+		<!-- Bootstrap core CSS -->
+		<link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
+		<style>
+			.bd-placeholder-img {
+				font-size: 1.125rem;
+				text-anchor: middle;
+				-webkit-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
+			}
+			@media(min-width: 768px) {
+				.bd-placeholder-img-lg {
+					font-size: 3.5rem;
+				}
+			}
+		</style>
+		<!-- Custom styles for this template -->
+		<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
 	</head>
 	<body>
-		{% include "shared/_navbar.html.twig" %}
-		{% include "shared/_carousel.html.twig" %}
-		<div class="container pt-5">
-			{% include "shared/_flash.html.twig" %}
-			{% block body %}{% endblock %}
-
-		</div>
-		{% include "shared/_footer.html.twig" %}
-	</body>
-</html>
+		<header>
+			{% include "shared/_navbar.html.twig" %}
+		</header>
+		<main role="main">
+			{% include "shared/_carousel.html.twig" %}
+			<div class="container marketing"> {%block content %}{% endblock %}
+				</div>
+				<!-- /.container -->
+				<!-- FOOTER -->
+				<footer class="container">
+					{% include "shared/_footer.html.twig" %}
+				</footer>
+			</main>
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+			<script src="{{asset('assets/js/bootstrap.bundle.js')}}"></script>
+		</body>
+	</html>
