--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion
+{% block title %}Log in!
 {% endblock %}
 
-{% block content %}
+{% block body %}
 	<form method="post">
 		{% if error %}
 			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -11,45 +11,33 @@
 
 		{% if app.user %}
 			<div class="mb-3">
-				Vous êtes connecté(e) en tant que
+				You are logged in as
 				{{ app.user.username }},
 				<a href="{{ path('app_logout') }}">Logout</a>
 			</div>
 		{% endif %}
 
-		<h2 class="h3 mb-3 font-weight-normal">Renseignez vos identifiants</h2>
+		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 		<label for="inputEmail">Email</label>
 		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-		<label class=" mt-4" for="inputPassword">Mot de passe</label>
+		<label for="inputPassword">Password</label>
 		<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
 		<input
 		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 		{#
-												        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-												        See https://symfony.com/doc/current/security/remember_me.html
-												
-												        <div class="checkbox mb-3">
-												            <label>
-												                <input type="checkbox" name="_remember_me"> Remember me
-												            </label>
-												        </div>
-												    #}
+		        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+		        See https://symfony.com/doc/current/security/remember_me.html
+		        <div class="checkbox mb-3">
+		            <label>
+		                <input type="checkbox" name="_remember_me"> Remember me
+		            </label>
+		        </div>
+		    #}
 
-		<button class="btn btn-lg btn-outline-success mt-4" type="submit">
-			Connexion
+		<button class="btn btn-lg btn-primary" type="submit">
+			Sign in
 		</button>
 	</form>
-	<p class="mt-3">Vous n'êtes pas inscrit ?
-		<a href="{{ path('register') }}">Créez un compte ici</a>
-	</p>
-	<div class="text-center mt-4">
-		<span class="text-muted">
-			Vous avez oublié votre mot de passe&nbsp;?
-			<u>
-				<a href="{{ path('security_forgotPw') }}" class="text-decoration-none">Le réinitialiser</a>
-			</u>
-		</span>
-	</div>
 {% endblock %}
