--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,46 +1,24 @@
-<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-	<a class="navbar-brand" href="{{ path('homepage') }}">Marie Shop</a>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+	<a class="navbar-brand" href="{{ path('homepage') }}">MarieShope</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarCollapse">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active">
-				<a class="nav-link" href="">Produits</a>
+				<a class="nav-link" href="{{ path('homepage') }}">Accueil
+					<span class="sr-only">(current)</span>
+				</a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="">Qui sommes-nous ?</a>
-			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="">Contact</a>
-			</li>
-
-		</ul>
-		<ul class="navbar-nav">
-			{% if app.user %}
-				<li class="nav-item active">
-					<a class="nav-link fs-2" href="">Mon compte
-						<small class="text-secondary">({{ app.user.firstname}})</small>
-					</a>
-				</li>
-
-				<li class="nav-item active">
-					<a class="nav-link" href="}">Déconnexion</a>
-				</li>
-			{% else %}
-				<li class="nav-item active">
-					<a class="nav-link" href="">Inscription</a>
-				</li>
-
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
-				</li>
-			{% endif %}
-			<li class="nav-item active">
-				<a title="Panier" class="nav-link" href="">
-					<i class="bi bi-cart3"></i>
+				<a class="nav-link" href="{{ path('register') }}">S'inscrire
+					<span class="sr-only">(current)</span>
 				</a>
 			</li>
 		</ul>
+		<form class="form-inline mt-2 mt-md-0">
+			<input class="form-control mr-sm-2" type="text" placeholder="Par mots clés" aria-label="Search">
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
+		</form>
 	</div>
 </nav>
