--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -6,32 +6,34 @@
 	<div class="collapse navbar-collapse" id="navbarCollapse">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active">
-				<a class="nav-link" href="{{ path('homepage') }}">Accueil
-					<span class="sr-only">(current)</span>
-				</a>
+				<a class="nav-link" href="{{ path('home') }}">Produits</a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="{{ path('home') }}">Qui sommes-nous ?</a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="{{ path('home') }}">Contact</a>
 			</li>
 			<ul class="navbar-nav">
 				{% if app.user %}
 					<li class="nav-item active">
-						<a class="nav-link fs-2" href="{{ path('account') }}">Mon compte<span class="sr-only">(current)</span>
+						<a class="nav-link fs-2" href="{{ path('account') }}">Mon compte
+							<small class="text-secondary">({{ app.user.firstname}})</small>
 						</a>
 					</li>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+				</li>
+			{% else %}
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('register') }}">Inscription</a>
+				</li>
 
-					<li class="nav-item active">
-						<a class="nav-link" href="{{ path('app_logout') }}">Déconnexion<span class="sr-only">(current)</span>
-						</a>
-					</li>
-				{% else %}
-					<li class="nav-item active">
-						<a class="nav-link" href="{{ path('register') }}">Inscription<span class="sr-only">(current)</span>
-						</a>
-					</li>
-
-					<li class="nav-item active">
-						<a class="nav-link" href="{{ path('security_login') }}">Connexion<span class="sr-only">(current)</span>
-						</a>
-					</li>
-				{% endif %}
-			</ul>
-		</div>
-	</nav>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+				</li>
+			{% endif %}
+		</ul>
+	</ul>
+</div></nav>
