--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -6,7 +6,7 @@
 	<div class="collapse navbar-collapse" id="navbarCollapse">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active">
-				<a class="nav-link" href="{{ path('homepage') }}">Produits</a>
+				<a class="nav-link" href="{{ path('product_display') }}">Produits</a>
 			</li>
 			<li class="nav-item active">
 				<a class="nav-link" href="{{ path('homepage') }}">Qui sommes-nous ?</a>
