--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -1,139 +1,21 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block title %}
-	Page de :
 	{{ product.name }}
 {% endblock %}
 
 {% block body %}
-	<h1>{{ product.name }}
-		({{ product.price | amount }})</h1>
 	<div class="row">
-		<div class="row">
-			<div class="col-lg-8 mb-md-3 mb-sm-3">
-				<div id="carouselSingleVehiculeIndicators" class="carousel slide carousel-fade">
-					<div class="carousel-inner">
-						{% for image in product.images %}
-							<div class="carousel-item {% if loop.first %}active{% endif %}">
-								<img src="{{ vich_uploader_asset(image, 'imageFile') }}" alt="{{ product.name }}" class="img-fluid">
-							</div>
-						{% endfor %}
-					</div>
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselSingleVehiculeIndicators" data-bs-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Previous</span>
-					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselSingleVehiculeIndicators" data-bs-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Next</span>
-					</button>
-				</div>
-				<div class="accordion mt-8" id="accordionExample">
-					<div class="accordion-item">
-						<h2 class="accordion-header">
-							<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-								Description détaillée
-							</button>
-						</h2>
-						<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-							<div class="accordion-body">
-								<strong>{{ product.name }}
-								</strong>
-								{{ product.description }}
+		<div class="col-md-5"></div>
+		<div class="col-md-7 my-auto">
+			<h3>{{product.name}}</h3>
 
-
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-								Indications techniques
-							</button>
-						</h2>
-						<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-							<div class="accordion-body">
-								<strong>Nom botanique:
-								</strong>
-								{{ product.boticalName }}
-								<br>
-								<strong>
-									Partie de la plante:
-								</strong>
-								{{ product.partofplant }}
-								<br>
-								<strong>Méthode d'extraction:</strong>
-								{{ product.extractionMethod }}
-								<br>
-								<strong>Culture de
-									{{ product.name }}:
-								</strong>
-								{{ product.culture }}
-								<br>
-								<strong>Contenance:
-								</strong>
-								{{ product.capacity }}
-								ml
-								<br>
-								<strong>Date Maximum de Durabilité:
-								</strong>
-								{{ product.MDD | date('Y') }}
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-								Mode d'utilisation et précautions
-							</button>
-						</h2>
-						<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-							<div class="accordion-body">
-								<strong>Conseils d'utilisation:</strong>
-								{{ product.advise }}
-
-								<br>
-								<strong>Précautions</strong>
-								{{ product.precautions }}
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-			</div>
-			<div class="col-md-4">
-				<div class="">
-					<div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
-						<h3 class="text-center">{{ product.name }}</h3>
-						<div class="features mt-2 d-flex">
-							<strong>Contenance:
-							</strong>
-							{{ product.capacity }}
-							ml
-							<br>
-
-
-						</div>
-					</div>
-
-
-					{% if product.stock > 0 %}
-						<a href="{{ path('cart_add', {id: product.id}) }}" class="btn btn-success">Ajouter au panier</a>
-					{% else %}
-						<p class="text-danger">Temporairement en rupture de stock</p>
-					{% endif %}
-
-
-				</div>
-				<div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
-
-					<p>
-						{{ product.introduction }}
-					</p>
-
-				</div>
-			</div>
+			<span class="product-price">{{(product.price / 100 )|number_format(2,',', '.')}}
+				€
+			</span>
+			<hr>
+			<p>{{product.description}}</p>
+			<a href="{{ path('add_to_cart', {id: product.id}) }}" class="btn btn-outline-success">Ajouter au panier</a>
 		</div>
 	</div>
 {% endblock %}
