--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,12 +6,10 @@
 
 			{% endblock %}
 		</title>
-		<!-- Bootstrap core CSS -->
-		<link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
-		<link
-		href="{{asset('assets/css/style.css')}}" rel="stylesheet">
 
-		<!-- Custom styles for this template -->
+		<link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
+		<link href="{{asset('assets/css/style.css')}}" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 		<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
 	</head>
 	<body>
