--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -182,8 +182,46 @@ form:invalid button.btn-dark[type="submit"],
   box-shadow: 5px 5px 7px 0.1rem black;
 }
 
+/*--------------------------------------------------------------
+# navbar
+--------------------------------------------------------------*/
 .navbar {
-  box-shadow: 0px 0px 10px 0.1rem black;
+  box-shadow: 0px 0px 0.1rem black;
+}
+
+.navbar {
+  text-align: center; /* Pour centrer horizontalement */
+}
+
+.navbar-nav {
+  display: inline-block;
+  padding: 0;
+}
+
+.nav-item {
+  display: inline-block;
+  margin: 0 10px; /* Espacement entre les éléments de la navbar */
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: #333; /* Couleur du texte des liens */
+}
+
+.fusion-secondary-header {
+  color: #747474;
+  font-size: 12px;
+  height: 30px;
+  background-color: #3e3e3e;
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
+@media only screen and (max-width: 768px) {
+  .fusion-secondary-header {
+    display: none;
+  }
 }
 
 .bd-placeholder-img {
