--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,17 +6,23 @@
 
 			{% endblock %}
 		</title>
-
-		<link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
-		<link href="{{asset('assets/css/style.css')}}" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-		<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
+		{% block stylesheets %}
+			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
+			<link href="{{asset('assets/css/style.css')}}" rel="stylesheet">
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+			<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
+		{% endblock %}
+		{% block javascripts %}
+			<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+		{% endblock %}
 	</head>
 	<body>
 		<header>
 			{% include "shared/_navbar.html.twig" %}
 		</header>
-		<main class="mb-5" role="main">
+		<main class="" role="main">
 			{% if carousel is defined %}
 				{% include "shared/_carousel.html.twig" %}
 			{% else %}
@@ -28,10 +34,9 @@
 
 			</main>
 			<!-- FOOTER -->
-			<footer class="container">
-				{% include "shared/_footer.html.twig" %}
-			</footer>
-			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-			<script src="{{asset('assets/js/bootstrap.bundle.js')}}"></script>
+
+			{% include "shared/_footer.html.twig" %}
+
+
 		</body>
 	</html>
