--- a/templates/partials/_product_card.html.twig
+++ b/templates/partials/_product_card.html.twig
@@ -21,6 +21,10 @@
 		</p>
 		<hr>
 		<a href="{{ path('product_show', {'category_slug': p.category.slug, 'slug': p.slug}) }}" class="btn btn-primary btn-sm">En savoir plus</a>
-		<a href="#" class="btn btn-success btn-sm">Ajouter</a>
+		{% if p.stock > 0 %}
+			<a href="{{ path('cart_add', {'id': p.id}) }}" class="btn btn-success btn-sm">Ajouter</a>
+		{% else %}
+			<p class="text-danger">Temporairement en rupture de stock</p>
+		{% endif %}
 	</div>
 </div>
