--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,39 +1,47 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-	<a class="navbar-brand" href="{{ path('homepage') }}">MarieShope</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarCollapse">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-				<a class="nav-link" href="{{ path('product_display') }}">Produits</a>
-			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="{{ path('homepage') }}">Qui sommes-nous ?</a>
-			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="{{ path('homepage') }}">Contact</a>
-			</li>
-			<ul class="navbar-nav">
-				{% if app.user %}
-					<li class="nav-item active">
-						<a class="nav-link fs-2" href="{{ path('account') }}">Mon compte
-							<small class="text-secondary">({{ app.user.firstname}})</small>
+<nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="{{ path('homepage') }}">MarieShope</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarCollapse">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('product_display') }}">Produits</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('homepage') }}">Qui sommes-nous ?</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('homepage') }}">Contact</a>
+				</li>
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a href="{{ path('cart_show') }}" class="nav-link">
+							<i class="fas fa-shopping-cart"></i>
+							Panier ({{ cartService.total | amount }})
 						</a>
 					</li>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
-				</li>
-			{% else %}
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('register') }}">Inscription</a>
-				</li>
+					{% if app.user %}
+						<li class="nav-item active">
+							<a class="nav-link fs-2" href="{{ path('account') }}">Mon compte
+								<small class="text-secondary">({{ app.user.firstname}})</small>
+							</a>
+						</li>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
+					</li>
+				{% else %}
+					<li class="nav-item active">
+						<a class="nav-link" href="{{ path('register') }}">Inscription</a>
+					</li>
 
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
-				</li>
-			{% endif %}
+					<li class="nav-item active">
+						<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
+					</li>
+				{% endif %}
+			</ul>
 		</ul>
-	</ul>
-</div></nav>
+	</div>
+</nav>
