--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -18,7 +18,7 @@
 		<a href="{{ path('account_password') }}" class="list-group-item list-group-item-action">
 			Mes commandes
 		</a>
-		<a href="{{ path('account_password') }}" class="list-group-item list-group-item-action">
+		<a href="{{ path('account_address') }}" class="list-group-item list-group-item-action">
 			Gérer mes adresses
 		</a>
 		<a href="{{ path('account_password') }}" class="list-group-item list-group-item-action">
