--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,52 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Votre panier
+{% block title %}Mon panier
 {% endblock %}
 
 {% block body %}
-	<h1>Votre panier</h1>
-	{% if items | length > 0 %}
-		<table class="table table-striped">
-			<thead>
+	<h3>Mon Panier</h3>
+	<p>Voici les articles que vous avez ajoutés</p>
+
+	<table class="table">
+		<thead>
+			<tr>
+				<th scope="col">Article</th>
+				<th scope="col">Prix (unité)</th>
+				<th scope="col">Quantité</th>
+				<th scope="col">Total</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for item in cart %}
 				<tr>
-					<th>Produit</th>
-					<th>Prix</th>
-					<th>Quantité</th>
-					<th>Total</th>
-					<th></th>
+					<td>
+						<img height="60px" src="/uploads/{{ item.product.image }}" alt="{{ item.product.name }}">
+						{{item.product.name}}
+					</td>
+					<td>{{(item.product.price / 100)|number_format(2,',','.') }}
+						€</td>
+					<td>x
+						{{ item.quantity }}</td>
+					<td>{{ (item.quantity * (item.product.price / 100))|number_format(2,',','.') }}
+						€</td>
 				</tr>
-			</thead>
-			<tbody>
-				{% for item in items %}
-					<tr>
-						<td>{{ item.product.name }}</td>
-						<td>{{ item.product.price|amount }}</td>
-						<td>
-							<a href="{{ path('cart_decrement', {'id': item.product.id}) }}" class="btn btn-primary btn-sm">
-								<i class="fas fa-minus"></i>
-							</a>
-							{{ item.qty }}
-							<a href="{{ path('cart_add', {'id': item.product.id}) }}?returnToCart=true" class="btn btn-primary btn-sm">
-								<i class="fas fa-plus"></i>
-							</a>
-						</td>
-						<td>{{ item.total|amount }}</td>
-						<td>
-							<a href="{{ path('cart_delete', {'id': item.product.id }) }}">
-								<i class="fas fa-trash"></i>
-							</a>
-						</td>
-					</tr>
-				{% endfor %}
-			</tbody>
-			<tfoot>
-				<tr>
-					<td colspan="3">Total :</td>
-					<td colspan="2">{{ total|amount }}</td>
-				</tr>
-			</tfoot>
-		</table>
-	{% else %}
-		<h2>Le panier est vide</h2>
-	{% endif %}
+			{% endfor %}
+		</tbody>
+		<tfoot>
+			<th>Total</th>
+			<td></td>
+			<td>x
+				{{ totalQuantity }}</td>
+			<td>{{ (totalPrice / 100)|number_format(2,',','.') }}
+				€</td>
+		</tfoot>
+	</table>
+	<a class="btn btn-info">Valider mon panier</a>
+
+
 {% endblock %}
