--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -25,7 +25,7 @@
 							<a href="{{ path('cart_decrement', {'id': item.product.id}) }}" class="btn btn-primary btn-sm">
 								<i class="fas fa-minus"></i>
 							</a>
-							{{ item.qty }}
+							{{ item.quantity }}
 							<a href="{{ path('cart_add', {'id': item.product.id}) }}?returnToCart=true" class="btn btn-primary btn-sm">
 								<i class="fas fa-plus"></i>
 							</a>
