--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -8,31 +8,30 @@
 	<div class="row">
 		<div class="col-md-6">
 			{% set formHtml %}
-			{{form_start(form, {action:path('order_add')})}}
-			{{ form_label(form.addresses, 'Choisissez votre adresse de livraison')}}
+			{{ form_start(form, {action:path('order_add')}) }}
+			{{ form_label(form.addresses, 'Choisissez votre adresse de livraison') }}
 			<a class="d-block mb-3" href="{{ path('account_address_new') }}">Ajouter nouvelle adresse</a>
-			{{form_end(form)}}
+			{{ form_end(form) }}
 			{% endset %}
-			{{ formHtml|replace({'[br]' : '<br>'})|raw }}
+			{{ formHtml|replace({'[br]': '<br>'})|raw }}
 		</div>
 		<div class="col-md-6">
 			<strong class="summary-label">Récapitulatif :</strong>
 			<div class="cart-summary">
-
-				<div class="row">
-					<div class="col-2 my-auto"><img height="50px" src="/uploads/{{ item.product.image }}" alt="{{ item.product.name }}"></div>
-					<div class="col-8 my-auto">{{ item.product.name }}</div>
-					<div class="col-2 my-auto">x{{ item.quantity }}</div>
-				</div>
-
-				<hr>
+				{% for item in cart %}
+					<div class="row">
+						<div class="col-2 my-auto"></div>
+						<div class="col-8 my-auto">{{ item.product.name }}</div>
+						<div class="col-2 my-auto">x{{ item.quantity }}</div>
+					</div>
+					<hr>
+				{% endfor %}
 				<div class="row">
 					<div class="col-9 font-weight-bold">Total</div>
-					<div class="col-3 font-weight-bold">{{ (totalPrice / 100)|number_format(2,',','.') }}
+					<div class="col-3 font-weight-bold">{{ (totalPrice / 100)|number_format(2, ',', '.') }}
 						€</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 {% endblock %}
