fix bug and carousel

--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ma commande - La Boot'Ique
+{% block title %}Ma commande - MarieShop
 {% endblock %}
 
 {% block body %}
