--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon compte - La Boot'Ique
+{% block title %}Mon compte - MarieShop
 {% endblock %}
 
 {% block body %}
@@ -15,7 +15,7 @@
 		</div>
 	{% endfor %}
 	<div class="list-group">
-		<a href="{{ path('account_address') }}" class="list-group-item list-group-item-action">
+		<a href="{{ path('account_order') }}" class="list-group-item list-group-item-action">
 			Mes commandes
 		</a>
 		<a href="{{ path('account_address') }}" class="list-group-item list-group-item-action">
