--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,12 +10,18 @@
 			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
 			<link href="{{asset('assets/css/style.css')}}" rel="stylesheet">
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 			<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
 		{% endblock %}
 		{% block javascripts %}
 			<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
 			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 		{% endblock %}
 	</head>
 	<body>
