--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,47 +1,58 @@
 <nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{ path('homepage') }}">MarieShope</a>
+		<a class="navbar-brand" href="{{ path('homepage') }}">MarieSHope</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarCollapse">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('product_display') }}">Produits</a>
+		<div class="collapse navbar-collapse" id="navbarColor01">
+			<ul class="navbar-nav me-auto">
+				<li class="nav-item">
+					<a class="nav-link active" href="{{ path('homepage') }}">Accueil
+						<span class="visually-hidden">(current)</span>
+					</a>
 				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('homepage') }}">Qui sommes-nous ?</a>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('product_display') }}">Boutique en ligne</a>
 				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="{{ path('homepage') }}">Contact</a>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('advise') }}">Conseils d'utilisations</a>
 				</li>
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a href="{{ path('cart_show') }}" class="nav-link">
-							<i class="fas fa-shopping-cart"></i>
-							Panier ({{ cartService.total | amount }})
-						</a>
-					</li>
-					{% if app.user %}
-						<li class="nav-item active">
-							<a class="nav-link fs-2" href="{{ path('account') }}">Mon compte
-								<small class="text-secondary">({{ app.user.firstname}})</small>
-							</a>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('contact_index') }}">Contact</a>
+				</li>
+			</ul>
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a href="{{ path('cart_show') }}" class="nav-link">
+						<i class="fas fa-shopping-cart"></i>
+						Panier ({{ cartService.total | amount }})
+					</a>
+				</li>
+				{% if app.user %}
+					{% if is_granted('ROLE_ADMIN') %}
+						<li class="nav-item">
+							<a href="{{ path('admin') }}" class="nav-link">Administration</a>
 						</li>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
-					</li>
-				{% else %}
-					<li class="nav-item active">
-						<a class="nav-link" href="{{ path('register') }}">Inscription</a>
-					</li>
+					{% endif %}
 
 					<li class="nav-item active">
-						<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
+						<a class="nav-link " href="{{ path('account') }}">Mon compte
+							<small class="text-secondary">({{ app.user.firstname}})</small>
+						</a>
 					</li>
-				{% endif %}
-			</ul>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
+				</li>
+			{% else %}
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('register') }}">Inscription</a>
+				</li>
+
+				<li class="nav-item active">
+					<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
+				</li>
+			{% endif %}
 		</ul>
-	</div>
-</nav>
+	</ul>
+</div></nav>
