--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -91,8 +91,10 @@
 		</div>
 	</div>
 
-	<hr
-	class="featurette-divider">
+	<hr class="featurette-divider">
+	<div class="row mt-5">
+		{% include "shared/_testimonials.html.twig" %}
+	</div>
 
-<!-- /END THE FEATURETTES -->
+	<!-- /END THE FEATURETTES -->
 {% endblock %}
