--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,96 +5,64 @@
 	<!-- Three columns of text below the carousel -->
 	<div class="row">
 		<div class="col-lg-4">
-			<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-				<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-			</svg>
-			<h2>Heading</h2>
-			<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-			<p>
-				<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-			</p>
-		</div>
-		<!-- /.col-lg-4 -->
-		<div class="col-lg-4">
-			<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-				<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-			</svg>
-			<h2>Heading</h2>
-			<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-			<p>
-				<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-			</p>
-		</div>
-		<!-- /.col-lg-4 -->
-		<div class="col-lg-4">
-			<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-				<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-			</svg>
-			<h2>Heading</h2>
-			<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-			<p>
-				<a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-			</p>
-		</div>
-		<!-- /.col-lg-4 -->
+			<img class="bd-placeholder-img rounded-circle" src="/images/products/essential-oil-4065187-640-6658b17a85073486584172.jpg" width="140" height="140" alt="Description de votre image">
+			<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+		</svg>
+		<h2>Huiles essentielles</h2>
+		<p>Découverez toute ma gamme d'huile essentielle bio.</p>
+		<p>
+			<a class="btn btn-secondary" href="https://localhost:8000/produits?q=&categories%5B%5D=1&minPrice=&maxPrice=" role="button">Voir produits &raquo;</a>
+		</p>
 	</div>
-	<!-- /.row -->
+	<!-- /.col-lg-4 -->
+	<div class="col-lg-4">
+		<img class="bd-placeholder-img rounded-circle" src="/images/products/tree-4211887-640-6658b0b7f3c7c112403014.jpg" width="140" height="140" alt="Description de votre image">
+		<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+	</svg>
+	<h2>Sprays hydrolats</h2>
+	<p>Toute la gamme de spray
+	</p>
+	<p>
+		<a class="btn btn-secondary" href="https://localhost:8000/produits?q=&categories%5B%5D=4&minPrice=&maxPrice=" role="button">Voir produits &raquo;</a>
+	</p>
+</div>
+<!-- /.col-lg-4 -->
+<div class="col-lg-4">
+	<img class="bd-placeholder-img rounded-circle" src="images/products/cosmetic-oil-3164684-640-6659dbbaa464c194224339.jpg" width="140" height="140" alt="Description de votre image">
+	<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+</svg>
+<h2>Recharges hydrolats</h2>
+<p>Liste des recharges hydrolats que je produis</p>
+<p>
+	<a class="btn btn-secondary" href="https://localhost:8000/produits?q=&categories%5B%5D=2&minPrice=&maxPrice=" role="button">Voir produits &raquo;</a>
+</p></div><!-- /.col-lg-4 --></div><!-- /.row --><!-- START THE FEATURETTES --><hr class="featurette-divider"><div class="row featurette"><div class="col-md-7">
+<h2 class="featurette-heading">Qui suis-je ?
+	<span class="text-muted">Mon histoire</span>
+</h2>
+<p class="lead">
+	<span>
+		<strong>Marie Farjaud, apicultrice et productrice de plantes médicales bio pour l'huile essentielle</span>
+	</strong>
 
 
-	<!-- START THE FEATURETTES -->
-
-	<hr class="featurette-divider">
-
-	<div class="row featurette">
-		<div class="col-md-7">
-			<h2 class="featurette-heading">First featurette heading.
-				<span class="text-muted">It’ll blow your mind.</span>
-			</h2>
-			<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-		</div>
-		<div class="col-md-5">
-			<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
-				<title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-			</svg>
-		</div>
-	</div>
-
-	<hr class="featurette-divider">
-
-	<div class="row featurette">
-		<div class="col-md-7 order-md-2">
-			<h2 class="featurette-heading">Oh yeah, it’s that good.
-				<span class="text-muted">See for yourself.</span>
-			</h2>
-			<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-		</div>
-		<div class="col-md-5 order-md-1">
-			<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
-				<title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-			</svg>
-		</div>
-	</div>
-
-	<hr class="featurette-divider">
-
-	<div class="row featurette">
-		<div class="col-md-7">
-			<h2 class="featurette-heading">And lastly, this one.
-				<span class="text-muted">Checkmate.</span>
-			</h2>
-			<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-		</div>
-		<div class="col-md-5">
-			<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
-				<title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-			</svg>
-		</div>
-	</div>
-
-	<hr class="featurette-divider">
-	<div class="row mt-5">
-		{% include "shared/_testimonials.html.twig" %}
-	</div>
-
-	<!-- /END THE FEATURETTES -->
-{% endblock %}
+	Originaire de l Allier, je suis arrivée dans le Lot et Garonne en 2014. Passionnée par la nature et le vivant, j’avais envie de mettre en place ma propre activité en lien avec l’animal et le végétal. C’est chose faite depuis la saison 2021 en reprenant 3ha à Bias dans le Lot et Garonne où j’ai réalisé mes 1eres plantations. Ayant débuté par l’apiculture, c’est tout naturellement que mon choix s’est porté sur la production de plantes médicinales et aromatiques valorisées en huiles essentielles permettant ainsi aux abeilles de bénéficier d’une floraison abondante, échelonnée et diversifiée.
+																
+																On débute par le thym (thymol et thujanol) aux propriétés antibactériennes, puis la lavande aux effets cicatrisants, apaisants et calmants, répulsifs pour les poux, et la menthe aux vertus rafraîchissantes, qui agit sur les troubles digestifs et les maux de tête. L’hélichryse italienne, reconnue pour son action contre les hématomes, n’est pas mellifère mais c’est ma plante de cœur et aussi la 1ere que j’ai utilisé à titre personnel, ça méritait bien un petit hommage !!! Choix non regretté tellement elle semble s’épanouir, une multitude d’insectes pollinisateurs investissent les plantes pendant la floraison qui laisse s’échapper un parfum envoûtant et le contraste des fleurs jaunes à côté du bleu des lavandes est magnifique.
+</p></div><div class="col-md-5">
+<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="/assets/img/Marie.webp" width="640" height="140" alt="Description de votre image">
+<title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></div></div><hr class="featurette-divider"><div class="row featurette"><div class="col-md-7 order-md-2">
+<h2 class="featurette-heading">Côté champs ...
+	<span class="text-muted">Culture bio exclusivement.</span>
+</h2>
+<p class="lead">Culture bio de Menthe Poivrée, Lavande fine, Thym Thymol, Thym Thujanol, Hélichryse Italienne, Estragon et Camomille Romaine
+										
+										Les plantes ont été sélectionnées en fonction de leurs capacités d'adaptation à Bias, pour les vertus de leurs huiles essentielles,pour leurs  qualités mellifères et enfin et non le moindre pour le choix du cœur ! Ainsi , on commence en avril mai par la floraison du thym thujanol, puis vient le tour du thym thymol. On enchaine en juin par l'hélichrtyse italienne et la lavande. En juillet, on fait une première coupe  de menthe poivrée puis une deuxième en septembre.Une fois les sommités fleuries récoltées, elles sont acheminées chez un distillateur puis on récupère le distillat composé de l'huile essentielle et de l'hydrolat . Quel dommage qu'on ne puisse pas partager le parfume enivrant de nos huiles essentielles. En, revanche, je peux vous montrer  quelques photos des plantations pôur le plaisir des yeux</p></div><div class="col-md-5 order-md-1">
+<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="assets/img/champs lavande.jpg" width="640" height="140" alt="Description de votre image">
+<title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></div></div><hr class="featurette-divider"><div class="row featurette"><div class="col-md-7">
+<h2 class="featurette-heading">Côté ruche
+	<span class="text-muted">environ 25 ruches.</span>
+</h2>
+<p class="lead">En été, le nombre de ruches peut s'élever à 40  puisque nous produisons nos propres essaims en prélevant  des  cadres dans nos ruches les plus populeuses. En fonction de la météo et des floraisons, nous pratiquons la transhumance .  
+								En plus de notre production de miel, nous élaborons différentes gourmandises. nous mettons un point d'honneur à réaliser  nous même ces  produits de manière artisanale à partir de nos propres recettes.</p></div><div class="col-md-5">
+<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="/assets/img/ruches.webp" width="640" height="140" alt="Description de votre image">
+<title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></div></div><hr class="featurette-divider"><div class="row mt-5">{% include "shared/_testimonials.html.twig" %}</div><!-- /END THE FEATURETTES -->{% endblock %}
