--- a/templates/advise/show.html.twig
+++ b/templates/advise/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Les conseils de Marie
 {% endblock %}
 {% block body %}
-	{{ advise.title }}
+	{{ advise.name }}
 	{{advise.content}}
-	{{ advise.image}}
+
 {% endblock %}
