--- a/templates/shared/_carousel.html.twig
+++ b/templates/shared/_carousel.html.twig
@@ -1,3 +1,7 @@
+{% block stylesheets %}
+	<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
+{% endblock %}
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	<ol class="carousel-indicators">
 		{% for key, header in headers %}
@@ -7,7 +11,7 @@
 	<div class="carousel-inner">
 		{% for key, header in headers %}
 			<div class="carousel-item {{key == 0 ? 'active' : ''}}" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(54, 54, 54, 0.4) 50%,  rgba(28, 28, 28, 0.3)),
-										                url(images/bannieres/{{header.image}}) center center/ cover no-repeat;">
+																									                url(images/bannieres/{{header.image}}) center center/ cover no-repeat;">
 				<div class="container">
 					<div class="carousel-caption text-left">
 						<h2>{{header.title}}</h2>
