--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -6,19 +6,14 @@
 {% endblock %}
 
 {% block body %}
-	<ol class="breadcrumb">
-		<li class="breadcrumb-item">
-			<a href="{{ path('homepage') }}">Accueil</a>
-		</li>
-		<li class="breadcrumb-item active">{{ category.name }}</li>
-	</ol>
+
 
 	<h1>Catégorie :
 		{{ category.name }}</h1>
 	<div class="row">
 		{% for p in category.products %}
 			<div class="col-lg-4 col-md-4">
-				{% include "_partials/_product_card.html.twig" %}
+				{% include "partials/_product_card.html.twig" %}
 			</div>
 		{% endfor %}
 	</div>
